Parsing prototype of TTS